objects/Team__c.object
<CustomObject>
    <description>Team where player makes his duties</description>
    <fields>
        <fullName>Played_Home_Matches_Count__c</fullName>
        <description>Define number of games with scores that team played at home</description>
        <label>Played Home Matches Count</label>
        <summaryForeignKey>Match__c.Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Active_Players__c</fullName>
        <description>Total number of active players</description>
        <label>Total Active Players</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Wins__c</fullName>
        <description>Total wins of the team</description>
        <label>Total Wins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>